--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# shel script with enviroment variables
+start.sh
+
 # Created by https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,windows,linux,macos,visualstudiocode
 
