--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.9.2",
+    "sequelize": "^6.37.1",
+    "tedious": "^17.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
