--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tedious": "^17.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
